--- a/Hello World !/Hello World !/Hello World !.vcxproj.filters
+++ b/Hello World !/Hello World !/Hello World !.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.c">
+    <ClCompile Include="Hello World !.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
